# image_decode_comparison

./: Cargo.toml  README.md
benches/: decode_jpeg.rs
data/: fast.jxl  photo.avif  slow.jxl
src/: main.rs
